# bf16

./: ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  STATUS.md  SUPPORT.md  bf16.asm  citation.cff  comp.bat  pyproject.toml  zip.bat
.github/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  optimization_or_feature.md
.github/workflows/: bf16_workflow.yml  run batchfiles  run batchfiles.yml
bf16/: __init__.py
bf16.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
