[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bf16"
version = "1.0.3"
description = "High-performance BFloat16 conversion powered by x64 Assembly."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{name = "Kent"}]
keywords = ["bfloat16", "x64", "assembly", "high-performance", "data-conversion", "windows"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/Pythonexplorer48/bf16"
"Repository" = "https://github.com/Pythonexplorer48/bf16"
"Wiki" = "https://github.com/Pythonexplorer48/bf16/wiki"

[tool.setuptools]
packages = ["bf16"]

[tool.setuptools.package-data]
bf16 = ["*.dll"]

[tool.setuptools.exclude-package-data]
bf16 = ["*.obj", "*.asm", "*.bat", "test_newbf16.py"]
